fixing visibility of weather img in light mode

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,4 @@
-$light-color: #FFF2F2;
+$light-color: #E8F9FD;
 $dark-color: #2B2B2B;
 
 * {
@@ -14,20 +14,21 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #7f5a83;
-    background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);
+    background-image: url('/backgrounds/contour_line.svg');
+    background-size: cover;
 }
 
 .wrapper {
     width: 600px;
     height: 300px;
     background-color: $light-color;
+    color: $dark-color;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     border-radius: 20px;
-    transition: .3s ease-in;
+    transition: .3s ease-in-out;
 }
 
 .top {
@@ -60,13 +61,24 @@ body {
             padding: .25rem .5rem;
             background: none;
             border: 1px solid #000;
-            border-radius: 5px;
+            border-radius: 30px;
             cursor: pointer;
+            transition: .5s;
         }
     }
 
-    .photo {
-        width: 125px;
+    .image-circle {
+        width: 100px;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $dark-color;
+        border-radius: 20px;
+
+        .photo {
+            width: 125px;
+        }   
     }
 }
 
@@ -97,6 +109,7 @@ body {
     background-color: #fff;
     border-radius: 30px;
     cursor: pointer;
+    transition: .3s ease-in-out;
 
     .theme-toggle {
         position: relative;
@@ -105,12 +118,12 @@ body {
         height: 25px;
         width: 25px;
         border-radius: 50%;
-        border: 2px solid $dark-color;
-        transition: .3s;
+        background-color: #3F4E4F;
+        transition: .3s ease-in-out;
     }
 
     .slide {
-        left: 32px;
+        left: 31px;
     }
 }
 
